Add day 2 material

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 				"ms-toolsai.jupyter"
 			]
 		}
-	}
+	},
+	"runArgs": ["--network=host"]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
